MCA-1516 implementing the route "delete track layout was used by racing event relationship"
